# polymr

./: .env.example  .gitignore  README.md  bot.py  config.yaml  index.html  launch.py  package-lock.json  package.json  polymr.db  pyproject.toml  quick_test.py  requirements.txt  run_bot.py  tailwind.config.js  test_bot.py  test_input.py  test_launcher.py  test_pricing.py  test_prompts.py
api/: .env.example  main.py  polymr.db  pyproject.toml  websocket_manager.py
api/bot/: __init__.py  controller.py  state_manager.py
api/database/: __init__.py  models.py
api/database/crud/: __init__.py  bot_state.py  markets.py  orders.py
api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
api/models/: __init__.py
api/routers/: bot.py  config.py  markets.py  orders.py
api/schemas/: __init__.py  bot_state.py  market.py  order.py
api/scripts/: init_db.py  startup.py
polymr/: __init__.py  config.py  main.py  pricing.py
polymr/execution/: __init__.py  order_executor.py
polymr/inventory/: __init__.py
polymr/monitoring/: __init__.py  metrics.py
polymr/polymarket/: __init__.py  order_signer.py  rest_client.py  websocket_client.py
polymr/quoting/: __init__.py  quote_engine.py
polymr/risk/: __init__.py  risk_manager.py
polymr/services/: __init__.py  auto_redeem.py
src/: App.tsx  index.css  store.ts  types.ts
src/components/: DepositModal.tsx  Portfolio.tsx  ProtocolCard.tsx  WalletButton.tsx
src/hooks/: useProtocols.ts  useWallet.ts
web/: .env.example  .eslintrc.json  .gitignore  biome.json  package.json  postcss.config.mjs.bak  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/markets/: page.tsx
web/app/orders/: page.tsx
web/app/setup/: page.tsx
web/lib/: api.ts  types.ts  useWebSocket.ts
web/types/: svg.d.ts
