[project]
name = "polymr-maker-bot"
version = "1.0.0"
description = "Polymarket Maker Rebates Bot - Automated liquidity provision for passive income"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Polymr", email = "bot@polymr.local"}
]
keywords = [
    "polymarket", "trading-bot", "market-maker", "prediction-markets",
    "liquidity-providers", "maker-rebates", "passive-income", "cryptocurrency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "py-clob-client>=0.15.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "ethers>=6.0.0",
    "asyncio>=3.4.3",
    "aiofiles>=23.0.0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "python-json-logger>=2.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
    "cachetools>=5.3.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
polymr-bot = "polymr.main:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
