[project]
name = "polymr-api"
version = "0.1.0"
description = "FastAPI backend for Polymr bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.25",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
